// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > 
#! 1`] = `
"SyntaxError [2:0-2:1]: '#' not followed by identifier
  1 |
> 2 | #!
    | ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) >  #! 1`] = `
"SyntaxError [1:1-1:2]: '#' not followed by identifier
> 1 |  #!
    |  ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > "use strict"
#! 1`] = `
"SyntaxError [2:0-2:1]: '#' not followed by identifier
  1 | "use strict"
> 2 | #!
    | ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > #
/*

*/ 1`] = `
"SyntaxError [1:0-1:1]: '#' not followed by identifier
> 1 | #
    | ^ '#' not followed by identifier
  2 | /*
  3 |
  4 | */"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > #!
#! 1`] = `
"SyntaxError [2:0-2:1]: '#' not followed by identifier
  1 | #!
> 2 | #!
    | ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > #\\041
 1`] = `
"SyntaxError [1:1-1:1]: Illegal Unicode escape sequence
> 1 | #\\041
    |  ^ Illegal Unicode escape sequence
  2 |"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > #\\u{21}
 1`] = `
"SyntaxError [1:1-1:7]: Illegal Unicode escape sequence
> 1 | #\\u{21}
    |  ^^^^^^ Illegal Unicode escape sequence
  2 |"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > #\\u{21} 1`] = `
"SyntaxError [1:1-1:7]: Illegal Unicode escape sequence
> 1 | #\\u{21}
    |  ^^^^^^ Illegal Unicode escape sequence"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > #\\u0021
 1`] = `
"SyntaxError [1:1-1:7]: Illegal Unicode escape sequence
> 1 | #\\u0021
    |  ^^^^^^ Illegal Unicode escape sequence
  2 |"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > () => #
/*

*/ 1`] = `
"SyntaxError [1:6-1:7]: '#' not followed by identifier
> 1 | () => #
    |       ^ '#' not followed by identifier
  2 | /*
  3 |
  4 | */"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > /*
*/#! 1`] = `
"SyntaxError [2:2-2:3]: '#' not followed by identifier
  1 | /*
> 2 | */#!
    |   ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > //
#! 1`] = `
"SyntaxError [2:0-2:1]: '#' not followed by identifier
  1 | //
> 2 | #!
    | ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > ;#! 1`] = `
"SyntaxError [1:1-1:2]: '#' not followed by identifier
> 1 | ;#!
    |  ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > \\u0023! 1`] = `
"SyntaxError [1:0-1:6]: Illegal Unicode escape sequence
> 1 | \\u0023!
    | ^^^^^^ Illegal Unicode escape sequence"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > \\u0023\\u0021 1`] = `
"SyntaxError [1:0-1:6]: Illegal Unicode escape sequence
> 1 | \\u0023\\u0021
    | ^^^^^^ Illegal Unicode escape sequence"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > \\x23! 1`] = `
"SyntaxError [1:0-1:0]: Illegal Unicode escape sequence
> 1 | \\x23!
    | ^ Illegal Unicode escape sequence"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > { #! } 1`] = `
"SyntaxError [1:2-1:3]: '#' not followed by identifier
> 1 | { #! }
    |   ^ '#' not followed by identifier"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > function fn(a = #\\u0021
) {} 1`] = `
"SyntaxError [1:17-1:23]: Illegal Unicode escape sequence
> 1 | function fn(a = #\\u0021
    |                  ^^^^^^ Illegal Unicode escape sequence
  2 | ) {}"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > ␍␊
#!
 1`] = `
"SyntaxError [2:0-2:1]: '#' not followed by identifier
  1 |
> 2 | #!
    | ^ '#' not followed by identifier
  3 |"
`;

exports[`Next - Hashbang grammar > Next - Hashbang grammar (fail) > ␍␊#!
 1`] = `
"SyntaxError [2:0-2:1]: '#' not followed by identifier
  1 |
> 2 | #!
    | ^ '#' not followed by identifier
  3 |"
`;
